deploy/ingress/assignment-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assignment-service
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
    - host: web-dev1-assignment.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grading-assignment-service
                port:
                  number: 8081
