deploy/ingress/course-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-service
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
    - host: web-dev2-course.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grading-course-service
                port:
                  number: 8081
