deploy/ingress/grading-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grading-service
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
    - host: web-dev1-grading.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grading-executor-service
                port:
                  number: 8083
