deploy/ingress/keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
    - host: web-dev2-keycloak.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
