deploy/ingress/notification-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
    - host: web-dev1-notification.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8085
