deploy/ingress/result-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-service
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
    - host: web-dev2-result.vucongtuanduong.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grading-result-service
                port:
                  number: 8084
