deploy/ingress/submission-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: submission-service
  namespace: web-grading
spec:
  ingressClassName: traefik
  rules:
  - host: web-dev2-submission.vucongtuanduong.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grading-submission-service
            port:
              number: 8082
